crates/patched_external/frc42_dispatch/macros/tests/naming/non-capital-start.stderr
error: proc macro panicked
 --> tests/naming/non-capital-start.rs:5:18
  |
5 |     let _str_hash = method_hash!("noPlaceForCamelCase");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: IllegalName(NotValidStart)
